<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AliensHideNSeek</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="btn_json">Json Request</string>
    <string name="btn_string">String Request</string>
    <string name="btn_image">Image Request</string>

    <string name="btn_json_obj_request">Json Object Request</string>
    <string name="btn_json_array_request">Json Array Request</string>

    <string name="handle_message">Enter a Handle</string>
    <string name="tagline_message">Enter a Tagline</string>
    <string name="join_game">Join Game</string>
    <string name="create_game">Create Game</string>
    <string name="game_message">Enter a game name</string>
    <string name="launch_game">Launch Game</string>
    <string name="gamename_message">Game Name</string>
    <string name="playercount_message">Player Limit</string>
    <string name="timelimit_message">Time Limit</string>
    <string name="start_game">Create</string>

    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="last_update_time_label">Last location update time</string>
    <string name="distance_label">m</string>

    <string name="start_updates">Start updates</string>
    <string name="stop_updates">Stop updates</string>
    <string name="location_updated_message">Location updated</string>

    <string name="game1">Game 1: Denver</string>

</resources>
