<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_create_game"
android:layout_width="match_parent"
android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"

    android:orientation="vertical"
tools:context="info.androidhive.AliensHideNSeek.CreateGameActivity">

<EditText android:id="@+id/gamename"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/gamename_message"/>
<EditText android:id="@+id/playercount"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/playercount_message"/>
<Button
    android:layout_width="100dp"
    android:layout_height="wrap_content"
    android:text="@string/start_game"
    android:layout_gravity="right"
    android:onClick="createGame"/>
</LinearLayout>